<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rate_border"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="30dp"
        android:src="@drawable/bg_feedback" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Feedback"
        android:textColor="@color/black_font"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/Please_send_us_some_feedback" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_edit_comment"
        android:fontFamily="@font/roboto_light"
        android:gravity="center_vertical"
        android:hint="@string/Write_some_feedback"
        android:minLines="5"
        android:paddingHorizontal="20dp"
        android:textFontWeight="100"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:paddingVertical="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <TextView
                android:id="@+id/btnDiscard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#5D6063"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:paddingVertical="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <TextView
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/send_feedback"
                android:textColor="#5D6063"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>