<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rate_border"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingVertical="20dp"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/icRate"
        android:src="@drawable/ic_star_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:text="@string/Your_opinion_matter_to_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:lineHeight="22dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:text="@string/If_you_enjoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRatingBar
            android:layout_marginTop="10dp"
            android:id="@+id/rtb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1"
            android:progressTint="@color/colorPrimary"
            android:secondaryProgressTint="@color/colorPrimary" />
    </LinearLayout>
    <TextView
        android:id="@+id/btn_rate"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_border_rate"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/Rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/btn_notnow"
        android:paddingVertical="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/Not_now"
        android:paddingHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>