<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.IntroScreenActivity">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/montserrat_medium"
        android:padding="@dimen/_20sdp"
        android:text="@string/skip"
        android:textColor="#6C6C6C"
        android:textSize="16sp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_circle"
        android:layout_below="@+id/tv_skip" />


    <LinearLayout
        android:id="@+id/ll_circle"
        android:layout_width="match_parent"
        android:layout_height="8sp"
        android:layout_above="@+id/rl_bottom"
        android:layout_marginHorizontal="55sp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_circle"
        android:orientation="horizontal">

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_circle_blue" />

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_circle" />

        <View
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_circle" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_22sdp">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/back"
            android:textColor="#6C6C6C"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="2sp"
            android:background="@drawable/bg_btn_next"
            android:fontFamily="@font/montserrat_bold"
            android:paddingHorizontal="@dimen/_25sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</RelativeLayout>