<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.AboutScreenActivity">

    <RelativeLayout
        android:id="@+id/rl_about_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="#F44336">

        <ImageView
            android:id="@+id/back_about"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_about"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/About"
            android:textColor="@color/white"
            android:textSize="21sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_banner_about"
        android:layout_below="@+id/rl_about_top"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent "
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="Office Reader"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/opensans_medium"
            android:gravity="center"
            android:text="@string/For_Android"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/opensans_medium"
            android:gravity="center"
            android:text="Version 1.0.0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/opensansmediumltalic"
            android:gravity="center"
            android:text="@string/Privacy_Policy"
            android:textColor="#F44336"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_banner_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#E3E2E2">

        <include
            android:id="@+id/banner"
            layout="@layout/layout_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>