<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/v_fab"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_option"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/_2sdp"
        android:background="@drawable/bg_option_menu"
        android:elevation="5dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/layout_fab_gotopage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_fab_snapscreen"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fab_gotopage"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/option_page" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/fab_gotopage"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/fab_gotowith"
                android:textColor="#818181"
                android:textSize="16sp" />

            <View
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@+id/fab_gotopage"
                android:layout_marginTop="-8dp"
                android:background="#DDE2E5" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_fab_favourite"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fab_share"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/option_share" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/fab_share"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/fab_share"
                android:textColor="#818181"
                android:textSize="16sp" />

            <View
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@+id/fab_share"
                android:layout_marginTop="-8dp"
                android:background="#DDE2E5" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_fab_snapscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_fab_share"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fab_snapscreen"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/option_take_image" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/fab_snapscreen"
                android:fontFamily="@font/opensans_bold"
                android:maxLines="1"
                android:text="@string/fab_snapscreen"
                android:textColor="#818181"
                android:textSize="16sp" />

            <View
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@+id/fab_snapscreen"
                android:layout_marginTop="-8dp"
                android:background="#DDE2E5" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layout_fab_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_fab_openwith"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fab_favourite"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/option_bookmark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/Bookmark"
                android:textColor="#818181"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_fab_openwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/cvtPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingRight="6dp"
                android:paddingBottom="2dp"
                android:text="@string/fab_openwith"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#5a6c78"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_openwith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_openwith"
            android:tint="#ffffff"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:maxImageSize="16dp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/fab"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="30dp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/option_work_space" />

</RelativeLayout>
